@@ -39,7 +39,6 @@ struct _SnapdApp
 
     SnapdDaemonType daemon_type;
     gchar *name;
-    gchar **aliases;
     gchar *desktop_file;
 };
 
@@ -80,12 +79,13 @@ snapd_app_get_name (SnapdApp *app)
  * Returns: (transfer none) (array zero-terminated=1): the alias names.
  *
  * Since: 1.7
+ * Deprecated: 1.25
  */
 gchar **
 snapd_app_get_aliases (SnapdApp *app)
 {
     g_return_val_if_fail (SNAPD_IS_APP (app), NULL);
-    return app->aliases;
+    return NULL;
 }
 
 /**
@@ -133,8 +133,6 @@ snapd_app_set_property (GObject *object, guint prop_id, const GValue *value, GPa
         app->name = g_strdup (g_value_get_string (value));
         break;
     case PROP_ALIASES:
-        g_strfreev (app->aliases);
-        app->aliases = g_strdupv (g_value_get_boxed (value));
         break;
     case PROP_DAEMON_TYPE:
         app->daemon_type = g_value_get_enum (value);
@@ -159,7 +157,7 @@ snapd_app_get_property (GObject *object, guint prop_id, GValue *value, GParamSpe
         g_value_set_string (value, app->name);
         break;
     case PROP_ALIASES:
-        g_value_set_boxed (value, app->aliases);
+        g_value_set_boxed (value, NULL);
         break;
     case PROP_DAEMON_TYPE:
         g_value_set_enum (value, app->daemon_type);
@@ -179,7 +177,6 @@ snapd_app_finalize (GObject *object)
     SnapdApp *app = SNAPD_APP (object);
 
     g_clear_pointer (&app->name, g_free);
-    g_clear_pointer (&app->aliases, g_strfreev);
     g_clear_pointer (&app->desktop_file, g_free);
 }
 
