@@ -50,7 +50,7 @@ typedef enum
 
 const gchar    *snapd_app_get_name         (SnapdApp *app);
 
-gchar         **snapd_app_get_aliases      (SnapdApp *app);
+gchar         **snapd_app_get_aliases      (SnapdApp *app) G_DEPRECATED;
 
 SnapdDaemonType snapd_app_get_daemon_type  (SnapdApp *app);
 
