@@ -20,11 +20,7 @@ QString QSnapdApp::name () const
 
 QStringList QSnapdApp::aliases () const
 {
-    gchar **aliases = snapd_app_get_aliases (SNAPD_APP (wrapped_object));
-    QStringList result;
-    for (int i = 0; aliases[i] != NULL; i++)
-        result.append (aliases[i]);
-    return result;
+    return QStringList ();
 }
 
 QSnapdEnums::DaemonType QSnapdApp::daemonType () const
